src/style.css
@import url('https://fonts.googleapis.com/css2?family=Exo:ital,wght@1,300&family=Taviraj&display=swap');
@import url('./css/reset.css');

:root {
  /* ! Colores */
  --color-primario: #191970;
  --color-secundario: cyan;
  --color-terciario: darkcyan;
  --bg-light: #f0f0f0;
  --bg-dark: #141414;
  --bg-blur: #ffffff66;
  --btn-radius: 0.5em;

  /* ! Tipografías */
  --tipo-principal: 'Taviraj', serif; /* ? Tipografía para el contenido */
  --tipo-secundaria: 'Exo', sans-serif; /* ? Tipografía para titulos */
}
body {
  background-color: var(--bg-light);

  text-rendering: optimizeLegibility;
}

body::-webkit-scrollbar {
  width: 5px; /* width of the entire scrollbar */
}

body::-webkit-scrollbar-track {
  background: #cccccc; /* color of the tracking area */
}

body::-webkit-scrollbar-thumb {
  background-color: var(--color-terciario); /* color of the scroll thumb */
}

.container {
  margin: 0px 12px;
}
.btn {
  color: white;
  background-color: var(--color-terciario);

  border-radius: 0.5em;

  transition: 0.3s all;
}
.btn:hover {
  color: black;
  background-color: var(--color-secundario);
}
.objAcentuado {
  color: var(--color-terciario);
}

/* ============================================================ */
/* =========================== MENU =========================== */
/* ============================================================ */

.menu {
  height: 5em;
  padding: 1em 0.5em;

  position: sticky;
  top: 0;
  z-index: 10;

  background: var(--bg-light);

  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  align-items: center;
}
.menu__container {
  margin: 0px auto;
}
.menu__controls {
  width: 100%;

  display: grid;
  grid-template-columns: repeat(2, max-content);
  justify-content: space-between;
  align-items: center;
}
.menu__logo {
  color: var(--color-primario);
  font-size: 2em;
  font-family: var(--tipo-secundaria);
}
.menu__links {
  background: var(--bg-light);
  width: 100%;
  padding: 2.2em 0em;

  position: absolute;
  top: 5em;
  z-index: 10;

  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  gap: 1em;

  transform: translateX(-100%);
  opacity: 0;

  transition: 0.5s transform ease-out, 0.3s opacity;
}
.menu__link:hover {
  color: black;
  text-decoration: underline;
}

.menu__icon {
  height: 100%;
  width: 100%;
}
.menu__btn {
  height: 3em;
  width: 3em;

  grid-row: 1/2;
  grid-column: 2/-1;

  transition: 0.3s transform ease-in-out;
}
.showMenu {
  transform: translateX(0);
  opacity: 1;
}
.hideBtn {
  transform: scale(0);
}
.showBtn {
  transform: scale(1);
}

/* ==================================================================== */
/* =============================== HERO =============================== */
/* ==================================================================== */

.hero {
  height: 88vh;
  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6)),
    url('./assets/hero.jpg') center center;
  background-size: cover;

  display: flex;
  flex-flow: column nowrap;
  justify-content: space-around;
  align-items: center;
}
.hero__content {
  width: 17em;

  margin: 2em;
}
.hero__text {
  color: white;

  text-shadow: 0 0 0.2em var(--color-secundario);

  font-size: 2em;
  line-height: 1.3em;
  text-align: center;
}
.hero__btn {
  margin: 2em;
  padding: 0.5em 2em;

  border: 1px solid var(--color-secundario);

  box-shadow: 0 0 0.6em var(--color-secundario);
}

/* ================================================================= */
/* ============================= INTRO ============================= */
/* ================================================================= */
.intro {
  padding-top: 6em;
}
.intro__title {
  margin: 1em 0em;
  font-size: 1.6em;
}

/* ==================================================================== */
/* ============================= SERVICES ============================= */
/* ==================================================================== */
.services {
  padding-top: 6em;

  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: center;
  gap: 2em;
}
.card {
  padding: 1em;
  width: 90%;
  max-width: 300px;

  border: 1px solid black;
  border-radius: 0.7em;

  text-align: center;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.card__number {
  height: 3em;
  width: 3em;

  color: var(--color-terciario);
  font-size: 1.5em;

  border: 1px solid var(--color-terciario);
  border-radius: 50%;

  display: flex;
  justify-content: center;
  align-items: center;
}
.card__title {
  width: 90%;
  padding: 0.5em 0em;

  border-bottom: 1px solid var(--color-terciario);

  font-size: 1.2em;
}
.card__text {
  padding: 0.5em 0em 1em;
}

/* ================================================================= */
/* ============================= STATS ============================= */
/* ================================================================= */
.stats {
  min-height: 60vh;
  width: 100%;

  margin-top: 2em;
  padding: 5em;

  color: white;
  text-align: center;
  text-shadow: 0 0 0.4em black;
  background: linear-gradient(var(--color-primario), var(--color-terciario));
}
.stats__container {
  margin: 0;

  height: 100%;
  width: 100%;

  display: flex;
  flex-flow: column wrap;
  gap: 2em;
}
.stat__title {
  font-size: 1.4em;
  margin-bottom: 0.3em;
}
.stat__text {
  font-size: 0.9em;
  font-style: italic;
}

/* ================================================================= */
/* ============================= ABOUT ============================= */
/* ================================================================= */
.about-us {
  padding-top: 6em;
}
.about-us__title {
  padding-bottom: 0.5em;

  font-size: 1.4em;
}

/* =============================================================== */
/* ============================= FAQ ============================= */
/* =============================================================== */
.FAQ {
  padding-top: 6em;
}
.FAQ__container {
  margin-bottom: 0.5em;
  padding: 2em 0.7em;

  border: 1px solid black;
  border-left: 5px solid var(--color-terciario);
  border-radius: 0.4em;
}
.FAQ__title {
  padding-bottom: 0.3em;

  color: var(--color-terciario);

  font-size: 1.3em;
}
.FAQ__title--main {
  font-size: 1.5em;

  padding-bottom: 0.5em;
}
.FAQ__text {
  margin-bottom: 1em;
}
.FAQ__answer {
  max-height: 0px;

  overflow: hidden;

  transition: 0.3s all;
}
.FAQ__answer--show {
  max-height: 300px;
  margin-top: 1em;

  overflow-y: auto;
}
.FAQ__link {
  transition: 0.2s color;
}
.FAQ__link:hover {
  color: var(--color-primario);
  text-decoration: underline;
}
.FAQ__btn {
  padding: 0.3em;

  box-shadow: 0 0 0.12em var(--color-secundario);
}

/* ================================================================ */
/* ============================= CALL ============================= */
/* ================================================================ */

.call {
  height: 100vh;
  margin-top: 6em;

  text-align: center;
  line-height: 2.1em;

  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.6)),
    url('./assets/call-to-action.jpg') center center;
  background-size: cover;

  display: flex;
  flex-flow: column nowrap;
  justify-content: space-evenly;
  align-items: center;
}
.call__title {
  font-size: 2.3em;

  color: white;
  text-shadow: 0 0 0.2em var(--color-secundario);
}
.call__btn {
  padding: 1em 2em;

  border: 2px solid var(--color-secundario);

  box-shadow: 0 0 0.7em var(--color-secundario);
}

/* ====================================================================== */
/* ============================= CONTACT US ============================= */
/* ====================================================================== */

.contact-us {
  height: 23vh;
  padding: 0.8em 0em;

  overflow: hidden;

  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
  align-items: start;
  gap: 0.2em;
}
.contact-us__title {
  margin-bottom: 0.5em;

  font-size: 1.2em;
}
.logo {
  height: 4em;
  width: 4em;

  align-self: center;
}
.contact-us__link:hover {
  color: black;
  text-decoration: underline;
}

/* ! ========================================================================================= ! */
/* ! ==================================== MEDIA QUERY 768 ==================================== ! */
/* ! ========================================================================================= ! */

@media (min-width: 768px) {
  .container {
    margin: 0px 25px;
  }

  /* ================================================================= */
  /* ============================= STATS ============================= */
  /* ================================================================= */
  .stats {
    height: 30vh;
    padding: 1em;
  }
  .stats__container {
    flex-flow: row nowrap;
    justify-content: space-around;
    align-items: center;
  }
  .stat {
    max-width: 15em;
  }

  /* ====================================================================== */
  /* ============================= CONTACT US ============================= */
  /* ====================================================================== */

  .contact-us {
    justify-content: space-around;
  }
}

/* ! ========================================================================================== ! */
/* ! ==================================== MEDIA QUERY 1024 ==================================== ! */
/* ! ========================================================================================== ! */

@media (min-width: 1024px) {
  .container {
    margin: 0px 50px;
  }

  /* ================================================================ */
  /* ============================= MENU ============================= */
  /* ================================================================ */

  .menu {
    flex-flow: row nowrap;
  }
  .menu__btn {
    display: none;
  }
  .menu__links {
    padding: 0;
    position: static;

    flex-flow: row nowrap;
    gap: 1.5em;

    transform: translateX(0);
    opacity: 1;
  }
  .menu_link {
    width: max-content;
  }

  /* ================================================================ */
  /* ============================= HERO ============================= */
  /* ================================================================ */

  .hero__content {
    width: 30em;
  }
  .hero__text {
    font-size: 3em;
  }
  .hero__btn {
    font-size: 1.5em;
  }

  /* ==================================================================== */
  /* ============================= SERVICES ============================= */
  /* ==================================================================== */

  .card {
    height: 300px;
    max-width: 500px;
  }
}

